--- a/styles.scss
+++ b/styles.scss
@@ -43,3 +43,97 @@ h6 {
 #__next {
     isolation: isolate;
 }
+
+
+a {
+    text-decoration: none;
+}
+
+:root {
+    --primary-color: #fefff4;
+    --secondary-color: #fee8ff;
+    --highlight-color: #db4848;
+    --primary-button-color: #ededed;
+    --secondary-button-color: #5f6aff;
+    --un-focused-color: #707070;
+    --headers-font: cursive;
+}
+
+html,
+body {
+    height: 100%;
+    width: 100%;
+}
+
+html {
+    font-size: calc(1rem + 0.5vw);
+    line-height: 1.4;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: var(--headers-font);
+}
+
+.site-header {
+    background-color: var(--secondary-color);
+    box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.3);
+    user-select: none;
+
+
+    &__h1 {
+        font-size: calc(1rem + 1.5vw);
+    }
+
+    &__links {
+        font-size: calc(.4rem + 1vw);
+        text-align: center;
+        line-height: 2rem;
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        padding: 0;
+
+        &--item {
+            list-style: none;
+            font-weight: 600;
+            line-height: 3rem;
+            border-bottom: 6px solid transparent;
+            text-align: center;
+            color: var(--un-focused-color);
+            transition: all 200ms ease-in-out;
+
+
+
+            &:hover {
+                background-color: rgba(0, 0, 0, 0.05);
+                color: black;
+                border-color: var(--highlight-color);
+                text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.2);
+            }
+
+            &:active {
+                background-color: var(--secondary-button-color);
+                border-color: var(--secondary-button-color);
+            }
+        }
+    }
+}
+
+.--primary-color {
+    background-color: var(--primary-color);
+}
+
+.--center-text {
+    text-align: center;
+}
+
+.--chosen-page {
+    background-color: rgba(0, 0, 0, 0.05);
+    color: black;
+    border-color: var(--secondary-button-color);
+}
