--- a/styles.scss
+++ b/styles.scss
@@ -137,3 +137,77 @@ h6 {
     color: black;
     border-color: var(--secondary-button-color);
 }
+
+.--card {
+    margin-top: 1rem;
+    background-color: var(--secondary-color);
+    width: clamp(120px, 50%, 500px);
+    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
+    padding: 1rem;
+    border-radius: 8px;
+}
+
+.--centered-flex {
+    display: flex;
+    justify-content: center;
+}
+
+.form__h2 {
+    font-size: calc(.8em + .8vw);
+}
+
+.form-input,
+.form-buttons__container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.--margin-top {
+    margin-top: 1.2rem;
+}
+
+.button,
+.back-to-top__button {
+    border-radius: 6px;
+    border: 1px solid black;
+    cursor: pointer;
+    background-color: var(--primary-button-color);
+    transition: all 200ms ease-out;
+
+    &:hover {
+        background-color: #d8d8d8;
+    }
+
+    &:active {
+        background-color: var(--secondary-button-color);
+    }
+}
+
+.--reset-button:active {
+    background-color: var(--highlight-color);
+}
+
+#recipe-ingredients-div {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+    &>label {
+        grid-column: 1 / 3;
+    }
+
+
+    & input {
+        width: 100%;
+    }
+}
+
+#recipe-name-div>input,
+#recipe-difficulty,
+#recipe-type,
+#recipe-duration {
+    width: calc(100% - 6ch);
+}
+
+#recipe-description-div {
+    display: grid;
+}
