--- a/styles.scss
+++ b/styles.scss
@@ -230,3 +230,12 @@ h6 {
 .--text-align-start {
     text-align: start;
 }
+
+.--pop-up {
+    position: fixed;
+    transform: translateY(-400%);
+    scale: 1.2;
+    background-color: var(--secondary-button-color);
+    color: white;
+    box-shadow: 0px 0px 0px 1000px rgba(0, 0, 0, 0.6);
+}
