--- a/styles.scss
+++ b/styles.scss
@@ -252,9 +252,20 @@ h6 {
     overflow-y: auto;
 }
 
-.recipe-container {
-    position: relative;
-    padding-bottom: 2rem;
+.all-recipes {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+
+
+    &__card {
+        margin: 2ch;
+        background-color: var(--secondary-color);
+        box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
+        padding: 1rem;
+        border-radius: 8px;
+        padding-bottom: 2rem;
+        position: relative;
+    }
 }
 
 .stared-button {
@@ -285,3 +296,4 @@ h6 {
 .--star-clicked {
     color: gold;
 }
+
