--- a/styles.scss
+++ b/styles.scss
@@ -254,7 +254,7 @@ h6 {
 
 .all-recipes {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
 
 
     &__card {
@@ -297,3 +297,8 @@ h6 {
     color: gold;
 }
 
+@media only screen and (max-width: 825px) {
+    .all-recipes {
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    }
+}
